Bug Fixed: Annoying Horizontal Scroll on Large Screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@
 }
 
 html, body {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   line-height: 1.4;
   scroll-behavior: smooth;
